<resources>
    <!--    Title-->
    <string name="app_name">Mad Level 7 Task 2</string>
    <string name="welcome_to_the_hva_locations_quest">Welcome to the HvA Locations Quest</string>
    <string name="instructions">After pressing start you will start the quiz. After each question you will be shown if your answer was correct.</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="test_question">test question</string>
    <string name="_1_10">1/10</string>
    <string name="confirm_answer">Confirm answer</string>
    <string name="count">%d/%d</string>>

</resources>