<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.QuizFragment">

    <TextView
        android:id="@+id/tvQuestionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_question"
        app:layout_constraintBottom_toTopOf="@+id/rgQuizAnswers" />

    <RadioGroup
        android:id="@+id/rgQuizAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@color/white"
        android:text="@string/confirm_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>